Fixed missing web3 heisenbug, UI improvements, cleaner code

--- a/public/index.html
+++ b/public/index.html
@@ -19,11 +19,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Token Vesting App</title>
+    <title>Token Vesting dApp</title>
   </head>
   <body>
     <noscript>
-      You need to enable JavaScript to run this app.
+      You need to enable JavaScript to run this dApp.
     </noscript>
     <div id="root"></div>
     <!--
